# c2pa-conformance-tool

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  QUICK_START.md  README.md  TEST_CERTIFICATES.md  TEST_README.md  _headers  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
.github/workflows/: deploy.yml
assets/: index-BEgGOdUZ.js  index-kjoZToby.css
profile-evaluator/: profile_evaluator_rs_bg.wasm  profile_evaluator_rs_bg.wasm.d.ts
public/: _redirects
public/local-c2pa/: c2pa_local.d.ts  c2pa_local.js  c2pa_local_bg.wasm.d.ts  package.json
public/profile-evaluator/: package.json  profile_evaluator_rs.d.ts  profile_evaluator_rs.js
scripts/: README.md  build-local-wasm.mjs  copy-profile-evaluator.mjs
src/: App.svelte  app.css
src/lib/: AssetProfilePage.svelte  CertificateManager.svelte  CertificateManager.test.ts  FileUpload.svelte  FileUpload.test.ts  ManifestSummary.svelte  ReportViewer.svelte  ReportViewer.test.ts  c2pa.test.ts  c2pa.ts  constants.ts  crjson.ts  generateSummary.ts  profileEvaluator.ts  trustListTest.test.ts  trustListTest.ts  types.ts
src/test/: setup.ts
test-certs/: test-key.pem
trust/: allowed.pem
wasm/: Cargo.toml
wasm/src/: lib.rs
